--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,9 @@ section.hero {
     }
 }
 
-.akhir .bg-akhir {
+/* .akhir .bg-akhir {
     background-image: url('../img/gambar-akhir.png');
+    background-color: rgb(107, 97, 97);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
@@ -170,7 +171,7 @@ section.hero {
 
 .akhir .bg-akhir a {
     font-size: 14px;
-}
+} */
 
 
 /* footer */
