--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,7 @@ section.hero {
 
 
 /* footer */
-.footer {
+/* .footer {
     font-family: 'Roboto';
     background-color: #fff;
 }
@@ -208,7 +208,7 @@ section.hero {
 
 .footer p {
     font-size: 14px;
-}
+} */
 
 
 
