--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,37 @@
 
 }
 
+/* navbar becomes mobile sidebar under lg breakpoint */
+@media (max-width: 992px) {
+    
+    .navbar-collapse.collapsing .navbar-nav {
+        z-index: 999;
+        background-color: rgba(255, 255, 255, 0.97);
+        color: black;
+        display: block;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: -45%;
+        transition: all 0.2s ease;
+    }
+
+    .navbar-collapse.show .navbar-nav {
+        z-index: 999;
+        background-color: rgba(255, 255, 255, 0.97);
+        color: black;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        flex-direction: column;
+        height: auto;
+        width: 75%;
+        transition: left 0.35s ease;
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    }
+}
+
 .tombol-sign:hover {
     background-color: white!important;
 }
@@ -59,6 +90,10 @@ section.hero {
 }
 
 /* ============ Skills ============== */
+
+.ig-color {
+    color: white;
+}
 
 .html5-color {
     color: orange;
