--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,14 @@ section.hero {
     color: #b283fa;
 }
 
+.react-color {
+    color: #61dbfb;
+}
+
+.nodejs-color {
+    color: #31e272;
+}
+
 .php-color {
     color: #8993be;
 }
