--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,9 @@ section.hero {
 .line-color {
     color: #00B900;
 }
+.linkedin-color {
+    color: #0e76a8;
+}
 /* ============= Skills ================ */
 
 
